# AirTable_PBGL

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh  solo.yml  update.sh
.claude/: CLAUDE.md
DOCS/: DEPENDENCIES.md  RELEASING.md  data-model.md  parse_airtable_docs.py
DOCS/AIRTABLE_API/: apm-dist-mgmt.md  artists.md  chevy-showroom-dist-mgmt.md  compositions.md  dot-records-data.md  legal-docs.md  master-owners.md  progress-report.md  publishers.md  recordings.md  registration-project-pro-mlc.md  registration-project-soundexchange.md  releases.md  resources.md  scratch.md  songwriters.md
scripts/: import_chevy_songs.py  link_chevy_releases.py  patch_chevy_featured_artists.py  patch_chevy_primary_artist.py
src/atp/: __init__.py  api.py  app.py  chevy_import_songs.py  chevy_link_releases.py  chevy_patch_featured_artists.py  chevy_patch_primary_artist.py  common.py  config.py  expand.py  main.py  md_parser.py  schema_parser.py
tests/: conftest.py  test_api.py  test_cli.py  test_expand.py  test_md_parser.py  test_schema_parser.py
